         Reported by Julien Landure
       - Fixed regression introduced in 2.0.7 with WriterRepresentation, 
         OutputRepresentation and subclasses when sending long entities 
         (1024 and longer). Reported by Tim Peierls.
       - Fixed Range issue when handling large files. Reported by Tom Moore.
       - Fixed potential NPE in FreeMarker ContextTemplateLoader.
    - Misc

- 2.0.7 (2011-04-27)
    - Bugs fixed
       - Optimized support of JAXB in the JAXRS extension in case
         the org.restlet.ext.jaxb extension is present in the 
         classpath. Reported by Julien Landure.
       - Amazon S3 authentication could fail due to new subdomain 
         names like "s3[a-z0-1\\-]*.amazonaws.com".
       - Fixed bug with the testing of equality of Roles in RoleAuthorizer.
         Reported by Tim Peierls.
       - Fixed issue with dormant threads in some IO operations due to 
         excessive thread pool instantiation (via TaskService). Now a 
         single temporary thread is used when an existing TaskService 
         can't be found.
       - Apache HTTP Client was processing cookies like a browser while
         as a Restlet client connector it shouldn't have done so, like
         for other connector such as the internal client.
         Reported by Kristoffer Gronowski and Martin Svensson
       - Fixed bug with the testing of equality of Roles in RoleAuthorizer.
         Reported by Tim Peierls.
    - Misc
       - Clarified in log trace the need to manually register connector
         helpers on the Android edition.

- 2.0.6 (2011-03-31)
    - Bugs fixed
       - Fixed Redirector when the targer URI is on a distinct domain.
         Reported by Guido Schmidt.
       - Fixed potential issue in ClientResource regarding the actual
         entity being resent in case of error.
    - Misc
       - Clarified default property values of the TunnelService class.
         
- 2.0.5 (2011-02-09)
    - Bugs fixed